--- a/First_neuron.ipynb
+++ b/First_neuron.ipynb
@@ -1021,7 +1021,7 @@
    "id": "fb793d66",
    "metadata": {},
    "source": [
-    "If we don't want to make flatten array mannually we can use keras "
+    "***If we don't want to make flatten array mannually we can use keras "
    ]
   },
   {
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd889678",
+   "id": "77a0e6ce",
    "metadata": {},
    "outputs": [],
    "source": []
