--- a/First_neuron.ipynb
+++ b/First_neuron.ipynb
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "9a7f5d51",
    "metadata": {},
    "outputs": [
@@ -1071,8 +1071,8 @@
     "model = keras.Sequential([\n",
     "    # Flatten the input using the Flatten layer in keras\n",
     "    keras.layers.Flatten(input_shape=(28, 28)),\n",
-    "    keras.layers.Dense(100, input_shape=(784,), activation='relu'),\n",
-    "    keras.layers.Dense(10, activation='sigmoid')\n",
+    "    keras.layers.Dense(100, input_shape=(784,), activation='relu'), #hidden input layers\n",
+    "    keras.layers.Dense(10, activation='sigmoid') #hidden output layer\n",
     "])\n",
     "\n",
     "model.compile(optimizer='adam',\n",
